# meetings

di_containers/: config.yml  pyproject.toml
di_containers/di_containers/: main.py
di_containers/di_containers/checkers/: checkers.py
di_containers/di_containers/containers/: containers.py
di_containers/di_containers/publishers/: publishers.py
di_containers/di_containers/repositories/: org_repositories.py  sub_repositories.py
di_containers/di_containers/schemas/: organization_schemas.py  report_schemas.py  subscriptions_schemas.py
di_containers/di_containers/services/: services.py
di_containers/di_containers/transformers/: transformers.py
meeting/: config_file.yaml  software_meeting.ipynb
meeting_typing/: pyproject.toml
postgres_isolation/: README.md  docker-compose.yaml  main.ipynb  pyproject.toml
postgres_isolation/content/ACID/: main.ipynb  theory.md
postgres_isolation/content/Anomalies/: main.ipynb
postgres_isolation/content/Isolations/: main.ipynb
