[tool.poetry]
name = "postgres-isolation"
version = "0.1.0"
description = ""
authors = ["Nikita Smirnov <nikita.smirnov@xelix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
